--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Puzzle Pro - Swipe Edition</title>
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#00f2ff">
 <style>
   :root { --neon: #00f2ff; --bg: #080a0c; --card: #1c2128; --accent: #2ecc71; --gold: #f1c40f; }
   * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
