--- a/index.html
+++ b/index.html
@@ -397,6 +397,18 @@
             setTimeout(() => navTo('page-menu'), 2000);
         };
     </script>
+
+<script>
+if ("serviceWorker" in navigator) {
+  window.addEventListener("load", () => {
+    navigator.serviceWorker.register("./sw.js")
+    .then(()=>console.log("SW Registered"))
+    .catch(e=>console.log("SW Failed", e));
+  });
+}
+</script>
+
+</body>
 </body>
                                                </html>
 
