--- a/index.html
+++ b/index.html
@@ -112,6 +112,34 @@
             position: fixed; inset: 0; background: rgba(0,0,0,0.95); z-index: 9999;
             display: none; flex-direction: column; justify-content: center; align-items: center;
         }
+        .btn-insta {
+    width: 100%;
+    padding: 15px;
+    margin: 8px 0;
+    border-radius: 12px;
+    border: none;
+    font-size: 14px;
+    font-weight: 800;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: white;
+    background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+    background-size: 300% 300%;
+    animation: instaGradient 4s ease infinite;
+    box-shadow: 0 0 15px rgba(220, 39, 67, 0.6);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.btn-insta:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 25px rgba(220, 39, 67, 0.9);
+}
+
+@keyframes instaGradient {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
     </style>
 </head>
 <body>
