--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </head>
 <body>
 
-    <div id="insta-container" style="display:none">
+    <div id="insta-container"
         <a href="https://www.instagram.com/amd_arain/" target="_blank" class="insta-btn">
             FOLLOW @AMD_ARAIN
         </a>
