--- a/index.html
+++ b/index.html
@@ -136,6 +136,23 @@
         #win-screen {
             position: fixed; inset: 0; background: rgba(0,0,0,0.95); z-index: 9999;
             display: none; flex-direction: column; justify-content: center; align-items: center;
+            #insta-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 20000;
+}
+
+#insta-container .insta-btn {
+  background: #E1306C !important;
+  color: white !important;
+  padding: 10px 18px;
+  border-radius: 25px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  box-shadow: 0 0 10px rgba(225,48,108,0.6);
+}
         }
     </style>
 </head>
